sfdx-source/force-app/main/default/objects/Account_Relationship__c/Account_Relationship__c.object-meta.xml
<CustomObject>
    <description>LEM-1337: This object is used to define the relationship Cross Accounts</description>
    <label>Account Relationship</label>
    <nameField>
        <displayFormat>AR - {0000}</displayFormat>
        <label>Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>