sfdx-source/force-app/main/default/objects/Account_Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-1337: The Account that lookups to one side of the Account Relationship.</description>
    <inlineHelpText>The account from which the relationship is originating.</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account Relationships cannot be created involving store accounts. Please update the Account and Related Account accordingly.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Store</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Accounts</relationshipLabel>
    <relationshipName>Related_Accounts_Originating_Relation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>