sfdx-source/force-app/main/default/objects/Account_Relationship__c/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <description>This field is used to store the value of Account RelationshipType field whenever Account RelationshipType is equals to Delivery Partner or Exclusive Delivery Partner.</description>
    <formula>IF(
       OR(
         TEXT(Relationship_Type__c)  ==  $Label.Competitors_Delivery_Partner,
         TEXT(Relationship_Type__c)  ==  $Label.Competitors_Exclusive_Delivery_Partner
        ),
        TRUE,
        FALSE
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitors</label>
    <type>Checkbox</type>
</CustomField>