sfdx-source/force-app/main/default/objects/Account_Relationship__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>LEM-1337: Captures the date when the Relationship between the Accounts ends</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>