sfdx-source/force-app/main/default/objects/Account_Relationship__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>LEM-1337: External Id field that holds the combination of the Accounts being related in the relationship and their respective Types</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>