sfdx-source/force-app/main/default/objects/Account_Relationship__c/fields/Inverse_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Inverse_Relationship_Type__c</fullName>
    <description>LEM-1337: Captures the type of Account from which the Relationship has been created.</description>
    <inlineHelpText>The type of account from which the relationship is originating.</inlineHelpText>
    <label>Inverse Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Relationships_Types</valueSetName>
    </valueSet>
</CustomField>