sfdx-source/force-app/main/default/objects/Account_Relationship__c/fields/Partners__c.field-meta.xml
<CustomField>
    <fullName>Partners__c</fullName>
    <description>This field is used to store the value of Account RelationshipType field whenever Account RelationshipType is equals to Merchant, Agency, Measurement Partner, adTech,POS/MVP Provider, Supplier.</description>
    <formula>IF(
       OR(
          TEXT(Relationship_Type__c) ==  $Label.Partners_Merchant,
          TEXT(Relationship_Type__c) ==  $Label.Partners_Agency,
          TEXT(Relationship_Type__c) ==  $Label.Partners_AdTech,
          TEXT(Relationship_Type__c) ==  $Label.Partners_Measurement_Partner,
          TEXT(Relationship_Type__c) ==  $Label.Partners_POS_MWP_Provider,
          TEXT(Relationship_Type__c) ==  $Label.Partners_Supplier
        ),
        TRUE,
        FALSE
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partners</label>
    <type>Checkbox</type>
</CustomField>