sfdx-source/force-app/main/default/objects/Account_Relationship__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-1337: This looks-up to the Account residing on the other side of the Account Relationship</description>
    <inlineHelpText>The account with which the user is creating a relationship to.</inlineHelpText>
    <label>Related Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account Relationships cannot be created involving store accounts. Please update the Account and Related Account accordingly.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Store</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Receiving Related Accounts</relationshipLabel>
    <relationshipName>Related_Accounts_Receiving_Relation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>