sfdx-source/force-app/main/default/objects/Account_Relationship__c/fields/Related_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Name__c</fullName>
    <description>LEM-341: Link Mx and Channel Partner Accounts</description>
    <formula>Related_Account__r.Name</formula>
    <label>Related Account Name</label>
    <type>Text</type>
</CustomField>