sfdx-source/force-app/main/default/objects/Account_Relationship__c/fields/Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1337: Captures the current status of the relationship between the Accounts involved</description>
    <label>Relationship Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>