sfdx-source/force-app/main/default/objects/Account_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1337: Captures the type of Account to which the Relationship is being created.</description>
    <inlineHelpText>The type of account with which the user is creating a relationship to.</inlineHelpText>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Relationships_Types</valueSetName>
    </valueSet>
</CustomField>