sfdx-source/force-app/main/default/objects/Account_Relationship__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>LEM-1337: Captures the Date when the relationship between the Accounts</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>